--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,12 @@
 .container {
 	min-height: 100vh;
-	padding: 0 0.5rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	/* padding: 0 0.5rem; */
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* justify-content: center; */
+	/* padding-top: 5rem; */
+	/* margin-top: 4rem; */
+	/* align-items: center; */
 }
 
 .main {
@@ -14,6 +16,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-top: 4rem;
 }
 
 .footer {
