--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,4 +18,4 @@ a {
 	box-sizing: border-box;
 }
 
-img[alt=img] { width: 100%; border-radius: 16px;}
+img[alt=img] { width: 80%; border-radius: 16px; margin-left: auto; margin-right: auto; display: block;}
