--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,8 +13,8 @@ body {
 	margin: 0;
 	font-family: "Karla";
   font-weight: 300;
-  background-color: rgb(32,33,36);
-  color: rgb(188,192,195)
+  /* background-color: rgb(32,33,36);
+  color: rgb(188,192,195) */
 }
 
 /* .link {
