--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
 	margin: 0;
 	font-family: "Karla";
   font-weight: 300;
+  font-size: 1.125rem;
   /* background-color: rgb(32,33,36);
   color: rgb(188,192,195) */
 }
@@ -21,9 +22,15 @@ body {
   color: blue;
 } */
 
+
+
 a {
-	color: rgb(139,180,247);
-	/* text-decoration: none; */
+	color: rgb(30,120,250);
+	text-decoration: none;
+}
+
+a:hover {
+  	text-decoration: underline;
 }
 
 * {
