--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,34 +1,18 @@
 .container {
-	min-height: 100vh;
+	/* min-height: 100vh; */
+	height: 100%;
+	width: 100%;
 }
 
 .main {
 	/* padding: 5rem 0; */
-	flex: 1;
+	/* flex: 1; */
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	margin-top: 3rem;
-}
-
-.footer {
-	width: 100%;
-	height: 100px;
-	border-top: 1px solid #eaeaea;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.footer img {
-	margin-left: 0.5rem;
-}
-
-.footer a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	max-width: 900px;
 }
 
 .title a {
@@ -74,7 +58,7 @@
 	justify-content: center;
 	flex-wrap: wrap;
 
-	max-width: 800px;
+	max-width: 600px;
 	margin-top: 3rem;
 }
 
@@ -112,9 +96,9 @@
 	height: 1em;
 }
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
 	.grid {
 		width: 100%;
 		flex-direction: column;
 	}
-}
+} */
