--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Libre Franklin";
+	font-family: "PT Sans";
   font-weight: 400;
   font-size: 1rem;
   /* background-color: rgb(32,33,36);
