--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,48 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto&family=Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Eczar&family=Gentium+Basic:ital,wght@0,400;0,700;1,400;1,700&family=Libre+Baskerville&family=Libre+Franklin&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo+2&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto&family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Eczar&family=Gentium+Basic:ital,wght@0,400;0,700;1,400;1,700&family=Libre+Baskerville&family=Libre+Franklin&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600;700&display=swap");
 
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family: "PT Sans";
-  font-weight: 400;
+  padding: 0;
+  margin: 0;
+  font-family: "Inconsolata";
+  font-weight: 300, 400, 500, 600, 700;
   font-size: 1rem;
-  /* background-color: rgb(32,33,36);
-  color: rgb(188,192,195) */
 }
 
 h1 {
-	font-weight: 700;
+  font-weight: 700;
 }
 
-/* .link {
-  color: blue;
-} */
-
-
-
 a {
-	color: rgb(30,120,250);
-	text-decoration: none;
+  color: rgb(30, 120, 250);
+  text-decoration: none;
 }
 
 a:hover {
-  	text-decoration: underline;
+  text-decoration: underline;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-img[alt=img] { width: 80%; border-radius: 16px; margin-left: auto; margin-right: auto; display: block;}
+img[alt="img"] {
+  width: 80%;
+  border-radius: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 
 b {
   font-weight: bolder;
