--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,13 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Inconsolata";
+  font-family: "IBM Plex Sans";
   font-weight: 300, 400, 500, 600, 700;
   font-size: 1rem;
 }
