--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@ body {
   font-family: "IBM Plex Sans";
   font-weight: 300, 400, 500, 600, 700;
   font-size: 1rem;
+  line-height: 1.5;
 }
 
 h1 {
