--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   color: #FFFFFF;
-  background-color: #121212;
+  background-color: #0A192F;
 }
 
 h1 {
